<resources>
    <string name="app_name">Rebalancer Portfolio</string>

    <!-- Disclaimer Activity-->
    <string name="welcome_text">Bienvenido</string>
    <string name="disclaimer_text">Descargo de responsabilidad</string>
    <string name="disclaimer_body">No soy responsable de las propuestas sugeridas por esta aplicación. Úselo solo como referencia fácil, siempre haga sus propios cálculos.</string>
    <string name="start_button_text">Comenzar</string>

    <string name="link_privacy_policy">política de privacidad</string>
    <string name="please_check_connection">Por favor revise su conexion a internet</string>
    <string name="privacy_policy_url">https://pages.flycricket.io/rebalanced-portfolio/privacy.html</string>

    <string name="home">Inicio</string>
    <string name="groups">Grupos</string>
    <string name="setting">Ajustes</string>

    <string name="target">Objetivo</string>
    <string name="asset">Activo</string>
    <string name="amount">Monto</string>

    <string name="no_assets_hint">Agregue uno usando la opción de menú \'agregar\'</string>

    <!-- Preferences -->
    <string name="currency_title">Divisa</string>
    <string name="fingerprint_security">Seguridad de huellas dactilares</string>
    <string name="about_the_app">Sobre la aplicación</string>
    <string name="legal_and_privacy">Legal y Privacidad</string>
    <string name="pref_feedback">Enviar comentarios</string>
    <string name="pref_feedback_sum">Informar problemas técnicos o sugerir nuevas funciones</string>
    <string name="not_available">No disponible</string>
    <string name="add">Agregar</string>

    <string name="label_name">Nombre</string>
    <string name="current_amount">Cantidad actual</string>
    <string name="currency_label">$</string>
    <string name="target_allocation_in_group">Asignación de objetivos % en grupo</string>
    <string name="zero">0.0</string>
    <string name="percent_label">%</string>
    <string name="note">Nota</string>
    <string name="_100">100</string>
</resources>