<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <TextView
        style="@style/TextTitle.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/lynch"
        android:text="@string/asset"
        android:layout_weight="1"/>

    <TextView
        style="@style/TextTitle.Medium"
        android:gravity="end"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/lynch"
        android:text="@string/target"/>

    <TextView
        style="@style/TextTitle.Medium"
        android:gravity="end"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/lynch"
        android:text="@string/amount"/>

</androidx.appcompat.widget.LinearLayoutCompat>