<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addedit.AddEditFragment">

    <data>
        <variable
            name="vm"
            type="dev.rockstar.portfolio.ui.addedit.AddEditViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_16">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:hint="@string/label_name"
                android:inputType="text"
                android:lines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerMount"
                android:layout_width="0dp"
                app:gone="@{vm.group}"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleAmount"
                    style="@style/TextTitle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/current_amount"
                    android:textColor="@color/lynch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currency"
                    style="@style/TextTitle.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/currency_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleAmount" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    app:layout_constraintBottom_toBottomOf="@+id/currency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/currency"
                    app:layout_constraintTop_toTopOf="@+id/currency" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerGroups"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:gone="@{vm.group}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerMount">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleGroup"
                    style="@style/TextTitle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/groups"
                    android:textColor="@color/lynch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/groups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleGroup" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerSeekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerGroups">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleAllocation"
                    style="@style/TextTitle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/target_allocation_in_group"
                    android:textColor="@color/lynch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintBottom_toBottomOf="@+id/allocation"
                    app:layout_constraintEnd_toStartOf="@+id/allocation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/allocation" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/allocation"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:text="@{vm.allocation}"
                    android:inputType="number"
                    app:layout_constraintEnd_toStartOf="@+id/percent"
                    app:layout_constraintTop_toBottomOf="@+id/titleAllocation" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/percent"
                    style="@style/TextTitle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:text="@string/percent_label"
                    app:layout_constraintBottom_toBottomOf="@+id/allocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/allocation" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerSeekbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>